tools: a little refactor with intellij ultimate