@@ -106,7 +106,7 @@ public class MpqBuilderService {
 			}
 			project = new Project(path.getFileName().toString(), path, gameType);
 		} else {
-			project = projectsOfPath.get(0);
+			project = projectsOfPath.getFirst();
 		}
 		
 		build(project, true);
@@ -193,7 +193,7 @@ public class MpqBuilderService {
 			}
 			// create unique cache path
 			final MpqEditorInterface threadsMpqInterface = new MpqEditorInterface(configService.getMpqCachePath()
-					.resolve(Long.toString(Thread.currentThread().getId())), configService.getMpqEditorPath());
+					.resolve(Long.toString(Thread.currentThread().threadId())), configService.getMpqEditorPath());
 			
 			// work
 			final boolean compressXml;
